@@ -29,6 +29,7 @@ New features:
 - 3466445: Upgrade Apache POI to 3.8
 
 Bug fixes:
+- 3527810: Removing fragment in URL
 - 3518687: URL normalization required in the Web crawler
 - 3521414: File not parsed in database crawler
 - 3516114: NPE with Web Crawler when no unique field is set
